<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> Health.io</string>
    <string name="tab_1"> Indications </string>
    <string name="tab_2"> Treatments </string>
    <string name="tab_3"> Providers </string>
    <string name="tab_4"> Analysis </string>
    <string name="button_edit"> Edit </string>
    <string name="indication_title"> Name </string>
    <string name="indication_subtitle"> Description </string>
    <string name="indication_startdate"> Starts </string>
    <string name="indication_enddate"> Ends </string>
    <string name="indication_repeat"> Repeat </string>
    <string name="indication_severity"> Severity </string>
    <string name="indication_submit"> Save </string>
    <string name="treatment_strength"> Treatment Strength </string>
    <string name="severity_noset"> No set </string>
</resources>